Reflecting review feedback